@@ -8,6 +8,9 @@ Note that build 228 was the last version supporting Python 2.
 
 Since build 300:
 ----------------
+* Fix a bug in `win32profile.GetEnvironmentStrings()` relating to environment
+  variables with an equals sign (@maxim-krikun in #1661)
+
 * Added win32com.shell.SHGetKnownFolderPath() and related constants.
 
 * Shifted work in win32.lib.pywin32_bootstrap to Python's import system from
